fix signup overlay shadow beeing clipped by container

--- a/css/signup.css
+++ b/css/signup.css
@@ -25,12 +25,6 @@ body {
 
 }
 
-.hide-scrollbar {
-    overflow-y: auto;
-    scrollbar-width: none;
-    -ms-overflow-style: none;
-}
-
 .hide-scrollbar::-webkit-scrollbar {
     display: none;
 }
